// Vitest Snapshot v1

exports[`Textarea > $attrs > textarea attrs should pass to textarea element 1`] = `
<div
  class="t-textarea"
  maxlength="20"
>
  <textarea
    class="t-textarea__inner narrow-scrollbar"
    name="description"
    placeholder="please text"
  />
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`Textarea > :props > :disabled 1`] = `
<div
  class="t-textarea t-is-disabled"
>
  <textarea
    class="t-textarea__inner t-is-disabled narrow-scrollbar"
    disabled=""
  />
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`Textarea > :props > :maxlength 1`] = `
<div
  class="t-textarea"
>
  <textarea
    class="t-textarea__inner t-resize-none narrow-scrollbar"
    maxlength="10"
  />
  <!---->
  <span
    class="t-textarea__limit"
  >
    0/10
  </span>
  <!---->
</div>
`;

exports[`Textarea > :props > :readonly 1`] = `
<div
  class="t-textarea t-is-readonly"
>
  <textarea
    class="t-textarea__inner narrow-scrollbar"
    readonly=""
  />
  <!---->
  <!---->
  <!---->
</div>
`;
